[gd_scene load_steps=7 format=3 uid="uid://c7d8sa0dlcf3f"]

[ext_resource type="Script" uid="uid://doiconhqpj2ju" path="res://title_screen.gd" id="1_05l2w"]
[ext_resource type="Texture2D" uid="uid://cols0nibrpu71" path="res://title_screen.jpeg" id="1_ak2if"]
[ext_resource type="Texture2D" uid="uid://dhcgvdj8x0jt8" path="res://Assets/UI/Buttons/Button_Blue_3Slides.png" id="2_ig5kc"]
[ext_resource type="Script" uid="uid://b0vg36144cwm5" path="res://quit_btn.gd" id="3_ig5kc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak2if"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig5kc"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05l2w")

[node name="img" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_ak2if")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ig5kc")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ak2if")

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ig5kc")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ig5kc")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ig5kc")
script = ExtResource("3_ig5kc")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_button_up"]
